--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
+    <div class="container">
+        <h1>TO-DO LIST</h1>
+        <form id="todo-form">
+            <input type="text" id="todo-form" placeholder="Add your task..." required>
+            <button type="submit">Add</button>
+        </form>
+        <ul id="todo-list"></ul>
 
+    </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
