--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <form id="todo-form">
             <input type="text" id="todo-form" placeholder="Add your task..." required>
             <button type="submit">Add</button>
+            <br><br>
+            <textarea id="todo-form" placeholder="Add your note..." rows="4" cols="50"></textarea>
         </form>
         <ul id="todo-list"></ul>
 
