--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <input type="text" id="todo-form" placeholder="Add your task..." required>
             <button type="submit">Add</button>
             <br><br>
+            <input type="date" required>
+            <button type="submit">Confirm</button>
+            <br><br>
             <textarea id="todo-form" placeholder="Add your note..." rows="4" cols="50"></textarea>
         </form>
         <ul id="todo-list"></ul>
