change css body

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
             <button type="submit">Add</button>
             <br><br>
             <input type="date" required>
+            <input type="time">
             <button type="submit">Confirm</button>
             <br><br>
             <textarea id="todo-form" placeholder="Add your note..." rows="4" cols="50"></textarea>
+            <br>
+            <button type="submit">Comment</button>
         </form>
         <ul id="todo-list"></ul>
 
